object orientated code

--- a/Fern1/Fern1.vcxproj.filters
+++ b/Fern1/Fern1.vcxproj.filters
@@ -21,9 +21,27 @@
     <ClCompile Include="Bitmap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fractalFern.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fractalTree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="vector2Helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bitmap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fractalFern.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fractalTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vector2Helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
